--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     
-    <!-- Primary Meta Tags - NO AI MENTION -->
-    <title>Byron Jean Baker Studio | Luxury Video Production for Global Brands</title>
-    <meta name="title" content="Byron Jean Baker Studio | Luxury Video Production for Global Brands" />
-    <meta name="description" content="Premium cinematography studio for luxury brands. 15 years directing for Warner Music, Budweiser, Sony Music. Hollywood-grade video production. Your impossible ideas, finally rendered." />
+    <!-- Primary Meta Tags -->
+    <title>Byron Jean Baker Studio | AI-Powered Cinema by BJB</title>
+    <meta name="title" content="Byron Jean Baker Studio | AI-Powered Cinema by BJB" />
+    <meta name="description" content="Algorithmic cinema studio delivering Hollywood-grade cinematography without physical cameras. 15 years directing for Warner Music, Budweiser, Sony Music. Your impossible ideas, finally rendered in cinema-grade reality." />
     <meta name="keywords" content="luxury video production, premium cinematography, high-end fashion films, music video production, luxury brand commercials, impossible cinematography, fashion film production, music industry video, premium brand content, high-end video production, luxury fashion video, cinematic brand content, record label video production, physics-defying cinematography, Warner Music, Budweiser, Sony Music" />
     <meta name="author" content="Byron Jean Baker Studio" />
     <meta name="robots" content="index, follow" />
@@ -21,8 +21,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://byronjeanbaker.studio/" />
-    <meta property="og:title" content="Byron Jean Baker Studio | Luxury Video Production" />
-    <meta property="og:description" content="Premium cinematography for global luxury brands. 15 years directing for Warner Music, Budweiser, Sony Music. Hollywood-grade video production." />
+    <meta property="og:title" content="Byron Jean Baker Studio | AI-Powered Cinema by BJB" />
+    <meta property="og:description" content="Algorithmic cinema studio delivering Hollywood-grade cinematography without physical cameras. 15 years directing for Warner Music, Budweiser, Sony Music." />
     <meta property="og:image" content="https://byronjeanbaker.studio/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -34,8 +34,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://byronjeanbaker.studio/" />
-    <meta name="twitter:title" content="Byron Jean Baker Studio | Luxury Video Production" />
-    <meta name="twitter:description" content="Premium cinematography for global luxury brands. Your impossible ideas, finally rendered. 15 years experience with major brands." />
+    <meta name="twitter:title" content="Byron Jean Baker Studio | AI-Powered Cinema by BJB" />
+    <meta name="twitter:description" content="Algorithmic cinema studio. Hollywood-grade cinematography without physical cameras. Your impossible ideas, finally rendered in cinema-grade reality." />
     <meta name="twitter:image" content="https://byronjeanbaker.studio/og-image.jpg" />
     
     <!-- Structured Data - Organization (NO AI MENTION) -->
